included a text box--doesn't function

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="utf-8" />
 
     <title>Giphy Project</title>
-    <meta name="description!!!!!!!" content="The HTML5 Herald!!!!!!" />
-    <meta name="author!!!!!" content="SitePoint!!!!!" />
+    <meta name="description" content="Giphy" />
+    <meta name="author" content="SitePoint" />
 
     <link rel="stylesheet" href="./assets/css/style.css" />
 
@@ -30,6 +30,11 @@
 
 
 
+    </div>
+
+    <div id="newTopic">
+      <h5>Add more buttons here</h5>
+      <input type="text">
     </div>
     
     <!--Links for javascript and jquery -->
